[workspace]
resolver = "2"
members = [ "bemudjo_ecs",
    "bemudjo_server_telnet",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Andrea Beggiato"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }

# Make tests run with release optimizations by default
[profile.test]
inherits = "release"
debug = true  # Keep debug symbols for better error messages in tests
